--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                                 <p class="timeline-text">
                                                     Graduated @<a href="https://mpc.edu.ph">Marikina Polytechnic
                                                         College</a>
-                                                </p>
+                                                </p><br>
                                             </div>
                                             <div class="timeline-item">
                                                 <div class="circle-dot"></div>
@@ -146,7 +146,7 @@
                                                 <p class="timeline-text">
                                                     Completed coursework in Data structures, Algorithms, Web Dev,
                                                     Object-oriented Programming, and Software Design.
-                                                </p>
+                                                </p><br>
                                             </div>
                                             <div class="timeline-item">
                                                 <div class="circle-dot"></div>
@@ -156,7 +156,7 @@
                                                 <h4 class="timeline-title">Bachelor of Science in Computer
                                                     Engineering(BSCpE)</h4>
                                                 <p class="timeline-text">
-                                                    Would like to continue to Bachelor
+                                                    Would like to continue to Bachelor<br>
                                                 </p>
                                             </div>
                                         </div>
@@ -175,10 +175,10 @@
                                                     <i class="bx bx-calendar"></i>2022
                                                 </h3>
                                                 <h4 class="timeline-title">Intermediate Front-End Development</h4>
+                                                <p class="timeline-text">JavaScript Course</p>
                                                 <p class="timeline-text">Bayan Academy supported by J.P. Morgan
                                                     Company</p>
-                                                <br>
-                                                <p class="timeline-text">JavaScript Course</p>
+                                                    <br>
                                             </div>
                                             <div class="timeline-item">
                                                 <div class="circle-dot"></div>
@@ -188,6 +188,7 @@
                                                 <h4 class="timeline-title">Responsive Web Design</h4>
                                                 <p class="timeline-text">freeCodeCamp Certification</p>
                                                 <p class="timeline-text">HTML CSS & Media Queries</p>
+                                                <br>
                                             </div>
                                             <div class="timeline-item">
                                                 <div class="circle-dot"></div>
@@ -196,6 +197,7 @@
                                                 </h3>
                                                 <h4 class="timeline-title">#</h4>
                                                 <p class="timeline-text">#</p>
+                                                <br>
                                             </div>
                                         </div>
                                     </div>
