--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                                     Technology (DCpET)</h4>
                                                 <p class="timeline-text">
                                                     Completed coursework in Data structures, Algorithms, Web Dev,
-                                                    Object-oriented Programming, and Software Design.
+                                                    Object-oriented Programming(Java), and Software Design(Java).
                                                 </p><br>
                                             </div>
                                             <div class="timeline-item">
@@ -195,8 +195,8 @@
                                                 <h3 class="timeline-date">
                                                     <i class="bx bx-calendar"></i>2022
                                                 </h3>
-                                                <h4 class="timeline-title">#</h4>
-                                                <p class="timeline-text">#</p>
+                                                <h4 class="timeline-title">Computer System Serving (NCII)</h4>
+                                                <p class="timeline-text">TESDA (ongoing)</p>
                                                 <br>
                                             </div>
                                         </div>
