--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfolio">
+    <meta name="author" content="Jhon Melvin Dolot">
+    <!-- Icons -->
+    <link rel="icon" type="image/png" sizes="16x16" href="img/16x16.jpg">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/32x32.jpg">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/180x180.jpg">
     <!-- CSS Files -->
     <link rel="stylesheet" href="css/style.css">
     <!-- Title -->
