--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Header Start -->
     <header class="masterHead">
         <nav class="navbar">
-            <a href="index.html" class="nav-logo"><img src="img/cover.png">Jhon Melvin Dolot</a>
+            <a href="index.html" class="nav-logo"><img src="img/cover.png"  class="cover-img">Jhon Melvin Dolot</a>
             <ul class="nav-menu">
                 <li class="nav-item">
                     <a href="#project" class="nav-link">Projects</a>
