--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <a href="#me" class="hire-btn">Check Background</a>
                     </div>
                     <div class="column">
-                        <img src="img/logo.png" alt="cover-img" class="cover-img">
+                        <img src="img/hehe.jpg" alt="cover-img" class="cover-img">
                     </div>
                 </div>
             </div>
@@ -72,9 +72,9 @@
                     <div class="about-content">
                         <div class="row">
                             <div class="about-text">
-                                <h3>I'm Jhon Melvin Dolot <span>Aspiring Developer</span></h3>
+                                <h3>I'm Jhon Melvin Dolot <span>an Aspiring Developer</span></h3>
                                 <p>
-                                    I'm passionate about solving problems and building websites and systems.
+                                    I'm passionate about solving problems and building websites. <br>
                                     In my free time, I enjoy activities such as reading, learning and gaming.
                                 </p>
                             </div>
@@ -98,8 +98,9 @@
                                 </div>
                                 <div class="row">
                                     <div class="buttons">
-                                        <a href="https://drive.google.com/u/0/uc?id=132UJNzA0XtZdrcI2xOkLSwMhox3nL_Jn&export=download"
-                                            target="_blank" class="hire-btn" download="">Download Résumé</a>
+                                        <a href="https://drive.google.com/u/0/uc?id=1dYDEHVaAQcrOLzUZOb_FUxbQ7jgwSUBG&export=download"
+                                            target="_blank" class="hire-btn" download="Your_Resume.pdf">Download
+                                            Résumé</a>
                                         <a href="#contact" class="hire-btn">Hire Me</a>
                                     </div>
                                 </div>
@@ -108,15 +109,15 @@
                                 <div class="row">
                                     <div class="skill-item">
                                         <h3>Languagges</h3>
-                                        <p>HTML | CSS | JavaScript | PHP | MySQL | JAVA Python</p>
+                                        <p>HTML | CSS | JavaScript | PHP | MySQL | JAVA | Python</p>
                                     </div>
                                     <div class="skill-item">
                                         <h3>Frameworks</h3>
-                                        <p>Bootstrap | Astro | Tailwind CSS</p>
+                                        <p>Bootstrap 4 | Tailwind CSS</p>
                                     </div>
                                     <div class="skill-item">
                                         <h3>Currently Learning</h3>
-                                        <p>JAVA | Python</p>
+                                        <p>Javascript | PHP | MySQL</p>
                                     </div>
                                 </div>
                                 <div class="row">
@@ -154,10 +155,12 @@
                                                             <h4 class="timeline-title">Diploma in Computer Engineering
                                                                 Technology (DCpET)</h4>
                                                             <p class="timeline-text">
-                                                                Completed coursework in Data structures, Algorithms, Web
-                                                                Dev,
-                                                                Object-oriented Programming, and Software Design @<a
-                                                                    href="https://www.pup.edu.ph">Polytechnic University
+                                                                Completed coursework in Data structures & Algorithms,
+                                                                Web
+                                                                Dev 1 & 2,
+                                                                Object-oriented Programming (JAVA), and Software Design
+                                                                (JAVA) @<a href="https://www.pup.edu.ph">Polytechnic
+                                                                    University
                                                                     of the
                                                                     Philippines</a>
                                                             </p><br>
@@ -243,35 +246,67 @@
                     </div>
                 </div>
                 <div class="row">
-                    <!-- Portfolio Item Start -->
-                    <div class="card">
-                        <img src="img/img.jpg" alt="">
-                        <div class="card-container">
-                            <h4><b>Solar Powered Intelligent
-                                    <br>
-                                    Hydroponic System</b></h4>
-                            <p>CET Design Project</p>
+                    <!-- Project 1 Start -->
+                    <div class="enclosure">
+                        <div class="card">
+                            <div class="carousel">
+                                <div class="slides">
+                                    <img src="img/Thesis3.jpg">
+                                    <img src="img/Thesis2.jpg">
+                                    <img src="img/Thesis1.jpg">
+                                    <img src="img/ThesisDefense.jpg">
+                                </div>
+                                <a class="prev">&#10094;</a>
+                                <a class="next">&#10095;</a>
+                            </div>
+                            <div class="card-body">
+                                <h3>Solar Powered Intelligent Hydroponic System for Lettuce Production</h3>
+                                <p>CET Design Project</p>
+                            </div>
                         </div>
                     </div>
-                    <!-- Portfolio Item End -->
-                    <!-- Portfolio Item Start -->
-                    <div class="card">
-                        <img src="img/img.jpg" alt="">
-                        <div class="card-container">
-                            <h4><b>E-Commerce Website</b></h4>
-                            <p>HTML CSS JavaScript</p>
+                    <!-- Project 1 End -->
+                    <!-- Project 1 Start -->
+                    <div class="enclosure">
+                        <div class="card">
+                            <div class="carousel">
+                                <div class="slides">
+                                    <img src="img/Thesis3.jpg">
+                                    <img src="img/Thesis2.jpg">
+                                    <img src="img/Thesis1.jpg">
+                                    <img src="img/ThesisDefense.jpg">
+                                </div>
+                                <a class="prev">&#10094;</a>
+                                <a class="next">&#10095;</a>
+                            </div>
+                            <div class="card-body">
+                                <h3>Solar Powered Intelligent Hydroponic System for Lettuce Production</h3>
+                                <p>CET Design Project</p>
+                            </div>
                         </div>
                     </div>
-                    <!-- Portfolio Item End -->
-                    <!-- Portfolio Item Start -->
-                    <div class="card">
-                        <img src="img/img.jpg" alt="">
-                        <div class="card-container">
-                            <h4><b>Calculator (Program) </b></h4>
-                            <p>Python</p>
+                    <!-- Project 1 End -->
+                    <!-- Project 1 Start -->
+                    <div class="enclosure">
+                        <div class="card">
+                            <div class="carousel">
+                                <div class="slides">
+                                    <img src="img/Thesis3.jpg">
+                                    <img src="img/Thesis2.jpg">
+                                    <img src="img/Thesis1.jpg">
+                                    <img src="img/ThesisDefense.jpg">
+                                </div>
+                                <a class="prev">&#10094;</a>
+                                <a class="next">&#10095;</a>
+                            </div>
+                            <div class="card-body">
+                                <h3>Solar Powered Intelligent Hydroponic System for Lettuce Production</h3>
+                                <p>CET Design Project</p>
+                            </div>
                         </div>
                     </div>
-                    <!-- Portfolio Item End -->
+                    <!-- Project 1 End -->
+
                 </div>
             </div>
         </section>
@@ -289,34 +324,34 @@
                 <h4 class="contact-sub-title">Please contact me</h4>
                 <div class="row">
                     <div class="flex">
-                            <!-- Contact Item Start -->
-                            <div class="contact-info-item">
-                                <div class="icon"><box-icon type='solid' name='phone'></box-icon></div>
-                                <h4>Call Me On</h4>
-                                <p>+63 915 675 5637</p>
-                            </div>
-                            <!-- Contact Item End -->
-                            <!-- Contact Item Start -->
-                            <div class="contact-info-item">
-                                <div class="icon"><box-icon name='gmail' type='logo'></box-icon></div>
-                                <h4>Email Me On</h4>
-                                <a href="mailto:dolotjhonmelvin@gmail.com" class="a-tag">Gmail</a>
-                            </div>
-                            <!-- Contact Item End -->
-                            <!-- Contact Item Start -->
-                            <div class="contact-info-item">
-                                <div class="icon"><box-icon name='linkedin' type='logo'></box-icon></div>
-                                <h4>Message Me On</h4>
-                                <p><a href="https://linkedin.com/in/melvin-dolot" class="a-tag">LinkedIn</a></p>
-                            </div>
-                            <!-- Contact Item End -->
-                            <!-- Contact Item Start -->
-                            <div class="contact-info-item">
-                                <div class="icon"><box-icon name='home-smile'></box-icon></div>
-                                <h4>Address</h4>
-                                <p>1611 Pasig City, Metro Manila-NCR</p>
-                            </div>
-                            <!-- Contact Item End -->
+                        <!-- Contact Item Start -->
+                        <div class="contact-info-item">
+                            <div class="icon"><box-icon type='solid' name='phone'></box-icon></div>
+                            <h4>Call Me On</h4>
+                            <p>+63 915 675 5637</p>
+                        </div>
+                        <!-- Contact Item End -->
+                        <!-- Contact Item Start -->
+                        <div class="contact-info-item">
+                            <div class="icon"><box-icon name='gmail' type='logo'></box-icon></div>
+                            <h4>Email Me On</h4>
+                            <a href="mailto:dolotjhonmelvin@gmail.com" class="a-tag">Gmail</a>
+                        </div>
+                        <!-- Contact Item End -->
+                        <!-- Contact Item Start -->
+                        <div class="contact-info-item">
+                            <div class="icon"><box-icon name='linkedin' type='logo'></box-icon></div>
+                            <h4>Message Me On</h4>
+                            <p><a href="https://linkedin.com/in/melvin-dolot" class="a-tag">LinkedIn</a></p>
+                        </div>
+                        <!-- Contact Item End -->
+                        <!-- Contact Item Start -->
+                        <div class="contact-info-item">
+                            <div class="icon"><box-icon name='home-smile'></box-icon></div>
+                            <h4>Address</h4>
+                            <p>1611 Pasig City, Metro Manila-NCR</p>
+                        </div>
+                        <!-- Contact Item End -->
                     </div>
                 </div>
                 <h3 class="contact-title">Send me an Email</h3>
