--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="description" content="Portfolio">
     <meta name="author" content="Jhon Melvin Dolot">
     <!-- Icons -->
-    <link rel="icon" type="image/png" sizes="16x16" href="img/16x16.jpg">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/32x32.jpg">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/180x180.jpg">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/180x180.png">
     <!-- CSS Files -->
     <link rel="stylesheet" href="css/style.css">
     <!-- Title -->
@@ -53,7 +53,7 @@
                         <a href="#me" class="hire-btn">Check Background</a>
                     </div>
                     <div class="column">
-                        <img src="img/hehe.jpg" alt="cover-img" class="cover-img">
+                        <img src="img/hehe.jpg" alt="cover-img" class="cover-img" style="border-radius: 20px;">
                     </div>
                 </div>
             </div>
@@ -63,11 +63,6 @@
         <!-- About Start -->
         <section class="about" id="me">
             <div class="container">
-                <div class="row">
-                    <div class="section-title">
-                        <h2>About Me</h2>
-                    </div>
-                </div>
                 <div class="row">
                     <div class="about-content">
                         <div class="row">
