--- a/index.html
+++ b/index.html
@@ -266,17 +266,17 @@
                         <div class="card">
                             <div class="carousel">
                                 <div class="slides">
-                                    <img src="img/Thesis3.jpg">
-                                    <img src="img/Thesis2.jpg">
-                                    <img src="img/Thesis1.jpg">
-                                    <img src="img/ThesisDefense.jpg">
+                                    <img src="">
+                                    <img src="">
+                                    <img src="">
+                                    <img src="">
                                 </div>
                                 <a class="prev">&#10094;</a>
                                 <a class="next">&#10095;</a>
                             </div>
                             <div class="card-body">
-                                <h3>Solar Powered Intelligent Hydroponic System for Lettuce Production</h3>
-                                <p>CET Design Project</p>
+                                <h3></h3>
+                                <p></p>
                             </div>
                         </div>
                     </div>
@@ -286,17 +286,17 @@
                         <div class="card">
                             <div class="carousel">
                                 <div class="slides">
-                                    <img src="img/Thesis3.jpg">
-                                    <img src="img/Thesis2.jpg">
-                                    <img src="img/Thesis1.jpg">
-                                    <img src="img/ThesisDefense.jpg">
+                                    <img src="">
+                                    <img src="">
+                                    <img src="">
+                                    <img src="">
                                 </div>
                                 <a class="prev">&#10094;</a>
                                 <a class="next">&#10095;</a>
                             </div>
                             <div class="card-body">
-                                <h3>Solar Powered Intelligent Hydroponic System for Lettuce Production</h3>
-                                <p>CET Design Project</p>
+                                <h3></h3>
+                                <p></p>
                             </div>
                         </div>
                     </div>
