--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                                                             <h4 class="timeline-title">Computer System Servicing(CSS)
                                                             </h4>
                                                             <p class="timeline-text">TESDA (ncII)</p>
-                                                            <p class="timeline-text">Ongoing</p>
+                                                            <p class="timeline-text">Passed (2023-2028)</p>
                                                             <br>
                                                         </div>
                                                     </div>
