--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                     </div>
                                     <div class="skill-item">
                                         <h3>Currently Learning</h3>
-                                        <p>Javascript | PHP | MySQL</p>
+                                        <p>Skills for All (Networking Basics)</p>
                                     </div>
                                 </div>
                                 <div class="row">
